 - Fix handling "part" events
 - Add Mojo::IRC 0.33 as required module #267
 - Add IO::Socket::SSL as required module
   * Required to connect to TLS networks
   * Required to fetch meta data from https resources
 - Change calculation of dialog.unread to server side
 - Change WebSocket keep-alive interval
 - Change "Join dialog" will be shown after a new connection is created

0.99_05 2016-08-22T16:30:57+0200
 - Fix breaking long words inside a message template
 - Fix only show nick change in the channels where the nick is active
 - Fix goto anything
 - Fix reading unicode (æøå) back from file
 - Fix dialog.frozen after webscocket comes back online
 - Fix skip installing dev deps by default
 - Fix handling of config file values
 - Fix "send" button in <convos-input/>
 - Fix missing Time::Piece on redhat #266
 - Add fetching connections, dialogs and notifications together with user object
 - Add icon to indicate that the WebSocket is down
 - Add last_read() to Convos::Core::Dialog
 - Add sorting of dialogs by lastRead
 - Add support for "forced_irc_server"
 - Add clicking on a notitication takes you to the dialog
 - Bundled cpanm, used by "script/convos install" (less dependencies)
 - Change client to keep WebSocket alive instead of backend
 - Converted Swagger2 to OpenAPI
 - Converted jQuery dependencies to Vue components
 - Converted Guides to gh-pages branch - http://convos.by/doc

0.99_04 2016-08-15T16:33:45+0200
 - Fix Could not send "\nsome message": Unable to construct PRIVMSG.
 - Fix remove dialogs when connection is deleted
 - Add search for dialogs
 - Add jump between search and input field
 - Add better rendering on small screens
 - Add count of unseen notifications
 - Add <convos-settings/> which includes wizard, connection editor and dialog creator
 - Add support for invite code
 - Add number of unread messages
 - Add handling of join, nick_change and part events
 - Add support for desktop notifications
 - Change layout: Big green menu on top